Stopping point - rough draft expand-collapse

--- a/public/global.css
+++ b/public/global.css
@@ -71,7 +71,7 @@ footer{
 
 @media only screen and (max-width: 568px) {
 	body{
-		font-size: 12px;
+		font-size: 16px;
 	}
 }
 
